--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@line/liff": "^2.22.4",
     "vue": "^3.3.4"
   },
   "devDependencies": {
